# cat_dog_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  infer.py  pyproject.toml  requirements.txt  train.py
